--- a/ruth/project1/interview.css
+++ b/ruth/project1/interview.css
@@ -1,82 +1,141 @@
-/**{
-  border:1px dotted blue;
-}*/
-
-.header{
-  height:80px;
-  display:block;
-  color:white;
-  background-color:red;
-  padding:5px;
-  z-index:0
-}
-
-.main{
-  background-color:white;
-  width:550px;
-  height:3000px;
-  display:block;
-  position:absolute;
-  margin-left:180px;
-  padding:20px;
-  z-index:50;
-}
-
-#circle1{
-  border-radius:100%;
-  position:absolute;
-  background-color:pink;
-  height:70px;
-  width:70px;
-  z-index:50;
-  top:25px;
-  left:50px;
-}
-
-#circle2{
-  border-radius:100%;
-  position:absolute;
-  background-color:pink;
-  height:70px;
-  width:70px;
-  z-index:50;
-  top:50px;
-  left:90px;
-}
-
-#circle3{
-  border-radius:100%;
-  position:absolute;
-  background-color:pink;
-  height:70px;
-  width:70px;
-  z-index:50;
-  top:80px;
-  left:35px;
+body{
+  background: url(images/3.jpg) no-repeat;
+  background-size:100%;
 }
 
 h2 p{
   line-height:5px;
 }
 
-p{
-  line-height:22px;
+.header{
+  background-color:red;
+  height:90px;
+  display:block;
 }
 
-img{
-  width:98%;
-  height:auto;
-  border-radius:5px;
+.main{
+  background-color:white;
+  width:530px;
+  height:3000px;
+  display:block;
   position:absolute;
-  z-index:-1;
-  float:right;
+  margin-left:240px;
+  padding:0px 60px 20px 60px;
 }
 
-img:nth-child(2){
+.text{
+  width:500px;
+}
+
+.textblocks{
+  font-family:'Roboto';
+  font-weight:300;
+  letter-spacing:0.02em;
+  line-height:1.4em;
+  margin-bottom:180px;
+}
+
+.betweenparagraphs{
+  height:17px;
+}
+
+.speaker{
+  font-family:'Roboto';
+  font-weight:700;
+}
+
+.backtotop{
+  position:fixed;
+  top:300px;
+  left:1260px;
+  color:black;
+  text-decoration:none;
+}
+
+#jacobhashimoto{
+  color:white;
+  font-size:18px;
+  font-family:'Roboto';
+  font-weight:500;
   position:absolute;
-  float:right;
+  top:68px;
+  left:755px;
+}
+
+#websitelink{
+  position:relative;
+  font-size:15px;
+  color:white;
+  left:15px;
+}
+
+#title{
+  font-size:60px;
+  line-height:82px;
+}
+
+#beautyandtoil{
+  font-family:'Slabo 27px', serif;;
+}
+
+#selenepreciado{
+  position:relative;
+  top:-20px;
+  font-size:18px
 }
 
 #after-title{
-height:20px;
+height:30px;
+}
+
+#jacobhashimotopicture{
+  position:relative;
+  top:-40px;
+}
+
+#backtotop{
+  position:relative;
+  left:18px;
+}
+
+#cloud1{
+  position:absolute;
+  top:50px;
+  left:160px;
+}
+
+#cloud2{
+  position:absolute;
+  top:220px;
+  left:650px;
+}
+
+#cloud3{
+  position:absolute;
+  top:500px;
+  left:300px;
+}
+
+#cloud4{
+  position:absolute;
+  top:700px;
+  left:70px;
+}
+
+#cloud5{
+  position:absolute;
+  top:900px;
+  left:800px;
+}
+
+#cloud6{
+  position:absolute;
+  top:1300px;
+  left:500px;
+}
+
+#cloud7{
+  position:absolute;
+  top:1600px;
+  left:170px;
 }
